--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,6 +21,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r fullstack-project/backend/requirements.txt
         pip install pylint
-    - name: Analysing the code with pylint
+    - name: Analysing the code with pylint, do not check for docstrings
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --disable=C0114,C0115,C0116 $(git ls-files '*.py')
