--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,7 +2,11 @@ name: Pylint
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - '**'
+  pull_request:
+    branches: 
+      - '**'
 
 jobs:
   build:
