--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
@@ -27,7 +28,7 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint, do not check for docstrings
       run: |
-        pylint --disable=C0114,C0115,C0116 $(git ls-files '*.py')
+        git ls-files '*.py' | xargs -n 10 pylint --disable=C0114,C0115,C0116
     - name: run pytest tests
       run: |
         pytest fullstack-project/backend/testing
